fix the twitter link

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                           </div>
                           <div class="message__bubble">
                             <div class="message__bubble_text"><a class="message__bubble_link"
-                                href="https://twitter.com/wildcards_eth">https://twitter.com/wildcards_eth</a>
+                                href="https://twitter.com/wildcards_world">https://twitter.com/wildcards_world</a>
                             </div>
                           </div>
                         </div>
@@ -315,7 +315,7 @@
                 href="https://www.facebook.com/unicornplatform/" target="_blank"><img class="social-buttons__icon"
                 src="img/icons/social/white/facebook.svg" /></a></li>
               -->
-            <li class="social-buttons__item"><a class="social-buttons__link" href="https://twitter.com/wildcards_eth"
+            <li class="social-buttons__item"><a class="social-buttons__link" href="https://twitter.com/wildcards_world"
                 target="_blank"><img class="social-buttons__icon" src="img/icons/social/white/twitter.svg" /></a></li>
             <li class="social-buttons__item"><a class="social-buttons__link" href="http://instagram.com/wildcards_world"
                 target="_blank"><img class="social-buttons__icon" src="img/icons/social/white/instagram.svg" /></a></li>
