--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
               </span></a></div>
           <div class="nav-02__links js-menu">
             <ul class="nav-02__list">
+<!--
               <li class="nav-02__item"><a class="button   button--black-outline  button--empty "
                   href="#about"><span>About</span></a>
               </li>
+-->
               <li class="nav-02__item"><a class="button   button--black-outline " href="#signup"><span>Sign
                     Up</span></a>
               </li>
@@ -54,7 +56,7 @@
           <h1 class="heading heading--accent header-23__heading">Wild Cards</h1>
           <p class="header-23__text">Ethereum based conservation tokens.</p>
           <hr />
-          <p class="header-23__text">Let your digital assets also make a valueable contribution to the world.</p>
+          <p class="header-23__text">Let your digital assets make a valuable contribution to the world.</p>
           <!--<div class="header-23__cta_box">
             <div class="buttons-set">
               <ul class="buttons-set__list">
