--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         // If you need an assistance of a tech guy, simply ask in the chat on website or join Unicorn Platform Slack channel.
         -->
           <form class="form js-subscribe-mailchimp-form"
-            action="https://unicornplatform.us18.list-manage.com/subscribe/post?u=b5a4c18c515b0b1b6f7f7f272&amp;amp;id=5238fd87f4"
+            action="https://world.us20.list-manage.com/subscribe/post?u=11056167825e6c3d276b0a362&amp;id=66d23199dd"
             method="post">
             <div class="form__inputs">
               <div class="form__input">
@@ -142,7 +142,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="message message--success js-message js-success-message">
+                  <!--<div class="message message--success js-message js-success-message">
                     <div class="message__box">
                       <button class="message__close js-close-message" type="button"><img class="message__close_icon"
                           src="img/icons/corner-top--blue.svg" /></button>
@@ -156,8 +156,8 @@
                         </div>
                       </div>
                     </div>
-                  </div>
-                  <!-- <div class="message message--success js-message js-success-message">
+                  </div>-->
+                  <div class="message message--success js-message js-success-message">
                     <div class="message__box">
                       <button class="message__close js-close-message" type="button"><img class="message__close_icon"
                           src="img/icons/corner-top--blue.svg" /></button>
@@ -165,7 +165,7 @@
                         <div class="message__in">
                           <div class="message__bubble">
                             <div class="message__bubble_text"><b>Success!</b> Welcome aboard!<img class="emoji  "
-                                src="img/emoji/laughing.png" alt="Emoji" />Now go and confirm your subscription pls.
+                                src="img/emoji/laughing.png" alt="Emoji" />We will be touch in shortly!
                             </div>
                           </div>
                           <div class="message__bubble">
@@ -209,7 +209,8 @@
                         </div>
                       </div>
                     </div>
-                  </div> -->
+                  </div> 
+
                   <div class="message message--error js-message js-error-message">
                     <div class="message__box">
                       <button class="message__close js-close-message" type="button"><img class="message__close_icon"
