updated styles - inline

--- a/index.html
+++ b/index.html
@@ -74,8 +74,11 @@
               </li>
 -->
                 <li class="nav-02__item">
-                    <span></span>
-                  <a class="" style='color:white;background-color:#6bad3e;padding:1rem;text-decoration: none;box-shadow:1px 2px 2px 1px #aaa;font-weight:bold' href="#signup"
+                  <span style="color:#888;padding:1rem;font-weight:bold" ><a href='https://ventureburn.com/2019/05/ethcapetown-blockchain-winning-applications/' style='text-decoration: none; color:#303030  '>BACKGROUND</a></span>
+                  <a
+                    class=""
+                    style="color:white;background-color:#6bad3e;padding:1rem;text-decoration: none;box-shadow:1px 2px 2px 1px #aaa;font-weight:bold"
+                    href="#signup"
                     ><span>SUBSCRIBE</span></a
                   >
                 </li>
@@ -131,20 +134,24 @@
             style="min-width: 30vw"
           />
           <div>
-            <h2 style='margin:0.2rem;'>Vitalik Buterin</h2>
-            <h3 style='margin:0;color:white;padding:0.8rem 1.2rem;display:inline-block;background-color:#6bad3e'>COMING SOON</h3>
+            <h2 style="margin:0.2rem;">Vitalik Buterin</h2>
+            <h3
+              style="margin:0;color:white;padding:0.8rem 1.2rem;display:inline-block;background-color:#6bad3e"
+            >
+              COMING SOON
+            </h3>
           </div>
         </div>
       </div>
     </header>
     <!-- ===== END OF: Header 23-->
     <!-- START OF: Email form 03 =====-->
-    <div class="cta_form-03" id="signup">
+    <div class="cta_form-03" style='background-color:#73c7d7' id="signup">
       <div class="container container--mid">
         <div class="cta_form-03__wrapper">
           <div class="cta_form-03__heading_box">
-            <h2 class="cta_form-03__heading">Ready to Try Wild Cards?</h2>
-            <span class="cta_form-03__text">Sign Up for updates.</span>
+            <h2 class="cta_form-03__heading">Want to stay in the loop?</h2>
+            <span class="cta_form-03__text">Sign up for our newsletter</span>
           </div>
           <div class="cta_form-03__form_box">
             <!-- START OF: mailchimp form =====
@@ -162,7 +169,7 @@
                     class="text-input js-email-input"
                     type="email"
                     name="EMAIL"
-                    placeholder="Enter your email"
+                    placeholder="E-mail"
                   />
                   <div class="form__messages">
                     <div
@@ -418,6 +425,7 @@
                   <button
                     class="button js-submit-button button--alt-accent-bg "
                     type="submit"
+                    style='background-color: #6bad3e'
                   >
                     <span class="button__text">Subscribe</span>
                     <div class="spinner"></div>
@@ -466,7 +474,7 @@
     <!-- START OF: Text 01 =====-->
     <div class="text--01" id="about">
       <div class="container container--small">
-        <div class="text--01__box">
+        <div class="text--01__box" style='background-color:#6bad3e;border-radius:0'> 
           <div class="text--01__emoji">
             <img
               class="emoji   emoji--large"
